--- a/backend/attach/custom_geo_field/osm.html
+++ b/backend/attach/custom_geo_field/osm.html
@@ -1,2 +1,2 @@
-{% extends "gis/admin/custom/custom.html" %}
-{% block scriptmap %}{% include "gis/admin/custom/osm.js" %}{% endblock %}
+{% extends "gis/admin/custom_geo_field/custom.html" %}
+{% block scriptmap %}{% include "gis/admin/custom_geo_field/osm.js" %}{% endblock %}
